force-app/main/default/objects/App_User__c/App_User__c.object-meta.xml
<CustomObject>
    <label>App User</label>
    <nameField>
        <displayFormat>App-{0000}</displayFormat>
        <label>App User Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>