force-app/main/default/objects/App_User__c/fields/app_version__c.field-meta.xml
<CustomField>
    <fullName>app_version__c</fullName>
    <defaultValue>&quot;Stable&quot;</defaultValue>
    <label>App Version</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stable</fullName>
                <default>true</default>
                <label>Stable</label>
            </value>
            <value>
                <fullName>Beta</fullName>
            </value>
            <value>
                <fullName>Alpha</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>