force-app/main/default/objects/App_User__c/fields/SF_User__c.field-meta.xml
<CustomField>
    <fullName>SF_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SF_User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>App_Users</relationshipName>
    <type>Lookup</type>
</CustomField>