force-app/main/default/objects/App_User__c/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>User Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>