force-app/main/default/objects/App_User__c/fields/User_Password__c.field-meta.xml
<CustomField>
    <fullName>User_Password__c</fullName>
    <label>User Password</label>
    <length>40</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>