force-app/main/default/objects/App_User__c/listViews/Active_App_Users.listView-meta.xml
<ListView>
    <fullName>Active_App_Users</fullName>
    <columns>NAME</columns>
    <columns>User_Email__c</columns>
    <columns>active__c</columns>
    <columns>User_Password__c</columns>
    <columns>SF_User__c</columns>
    <columns>User_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active App Users</label>
</ListView>