force-app/main/default/objects/App_User__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User_Email__c</columns>
    <columns>active__c</columns>
    <columns>User_Password__c</columns>
    <columns>SF_User__c</columns>
    <columns>User_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>